# clast

./: .gitignore  CLAUDE-CLAST-ADDITION.md  CLAUDE.md  LICENSE  README.md  bootstrap.sh  clast-mcp-requirements.md  index.sh  pyproject.toml  server.py
cmake/: ClastIndex.cmake
docs/: compact-response-format.md  potential-future-features.md
src/clang_ast_mcp/: __init__.py  __main__.py  db.py  format_compact.py  indexer.py  search.py  server.py
tests/: test_format_compact.py
