[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clang-ast-mcp"
version = "0.1.0"
description = "Clang AST MCP Server — Semantic C++ code index for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "libclang>=16.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
clang-ast-mcp = "clang_ast_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
